# onKawaraMapping

./: .gitignore  LICENSE  README.md  main.py  mapOper.py  pyproject.toml  requirements.txt  util.py
.github/workflows/: static.yml
data/: location.json  on_kawara_data.csv
output/: cities_without_coordinates.txt  kawaraMap.html
src/: geo_handler.py  map_oper.py  utils.py
