[project]
name = "onkawaramapping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argcomplete>=3.6.2",
    "branca>=0.8.2",
    "charset-normalizer>=3.4.3",
    "click>=8.3.0",
    "dspy>=3.0.3",
    "folium>=0.20.0",
    "geographiclib>=2.1",
    "geopy>=2.4.1",
    "idna>=3.10",
    "ipywidgets>=8.1.7",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "numpy>=2.3.3",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pipx>=1.8.0",
    "pyparsing>=3.2.5",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "six>=1.17.0",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "urllib3>=2.5.0",
    "userpath>=1.9.2",
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

